# aiven-iac-migration

./: .gitignore  README.md  pyproject.toml
migration/: __init__.py  aiven.py  errors.py  migrate.py
migration/k8s/: models.py  resources.py
