[tool.poetry]
name = "aiven-iac-migration"
version = "0.1.0"
description = "Tool to migrate services from terraform to aiven-operator"
authors = ["Morten Lied Johansen <morten.lied.johansen@nav.no>"]
license = "MIT"
packages = [{include = "migration"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.6.0"
requests = "^2.31.0"
lightkube = "^0.14.0"
pydantic = "^2.4.2"
rich-argparse = "^1.3.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
migrate = "migration:main"
